--- a/src/assets/components/dy-date.html
+++ b/src/assets/components/dy-date.html
@@ -1,3 +1,13 @@
+<template id="dy-date">
+	<style>
+	:host {
+		display: inline;
+	}
+	</style>
+	<date></date>
+</template>
+
+
 <script>
 class DYDate extends DYElement {
 	constructor(){
