Revert "Make .html imports build able"
This reverts commit 4e3030074ad8cc6ff8d6bab296c4c70f88ba69fd.

--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -182,7 +182,7 @@ class DYProjectFilters extends DYElement {
 					.attr('data-term', term.slug)
 					.attr('data-selector', `.${term.taxonomy}-${term.slug}`)
 					.html(term.name)
-					.on('click', function(){
+					.on('click', function(){X(this, _this)
 						this.toggleClass('active')
 						_this.update()
 					})
