Update header to include icons, special "immersive" home page layout

--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -11,7 +11,10 @@
 	background: rgba(255, 255, 255, 0.95) url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 13"><g opacity=".4"><rect width="18" height="3" rx="1"/><rect y="5" width="18" height="3" rx="1"/><rect y="10" width="18" height="3" rx="1"/></g></svg>') 200% center/7.5% 25% no-repeat;
 	box-shadow: rgba(0,0,0,0.1) 0 -1px inset;
 	color: rgba(0,0,0,0.75);
+
 	flex: 0 auto;
+	justify-content: center;
+
 	position: absolute;
 	transition: var(--transition-slow);
 	width: var(--site-width);
@@ -26,6 +29,8 @@ header.immersive:not(.sticky) {
 header.immersive #main-menu {
 	background-color: transparent;
 	background: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
+}
+header.immersive #main-menu > ul > li > a {
 	color: #fff;
 }
 header.sticky #main-menu {
@@ -33,10 +38,14 @@ header.sticky #main-menu {
 	position: fixed;
 	top: 0;
 }
+header.sticky #main-menu > ul {
+	flex-wrap: nowrap;
+}
+
 #logo {
 	margin-right: auto;
 	padding: 0 var(--padding);
-	height: 100%;
+	height: var(--main-menu-height);
 	will-change: transform;
 }
 #logo img {
@@ -47,9 +56,9 @@ header.sticky #main-menu {
 	transform-origin: left;
 	transition: var(--transition-slow) var(--ease-in-out-back);
 }
-header.immersive #logo img {
+/*header.immersive #logo img {
 	filter: brightness(20);
-}
+}*/
 #logo:hover img {
 	transform: perspective(500px) rotateY(20deg);
 }
@@ -59,6 +68,9 @@ header.immersive #logo img {
 	color: #fff;
 	font-size: 0.75em;
 	line-height: var(--secondary-menu-height);
+}
+#secondary-menu.immersive {
+	background-color: transparent;
 }
 
 nav ul {
@@ -84,15 +96,26 @@ nav ul > li > a {
 }
 #main-menu > ul > li > a {
 	font-family: var(--heading-font);
+
+	font-family: 'Fun Font';
+	font-size: 1.2em;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+
 	padding: 0 0.8em;
-	line-height: var(--main-menu-height);
-	transition: var(--transition-fast), font-size var(--transition-slow);
+    display: flex;
+    align-items: center;
+	transition: var(--transition-fast), font-size var(--transition-slow), transform var(--transition-medium) 0.05s var(--ease-in-out-back);
 }
 header.sticky #main-menu > ul > li > a {
 	font-size: 0.9em;
 }
 #main-menu ul > li > a:hover {
-	color: var(--accent-1);
+	/*color: var(--accent-1);*/
+	letter-spacing: 0.05em;
+	opacity: 1;
+	text-shadow: rgba(0, 0, 0, 0.1) 0 0 0.1em;
+	transform: scale(1.15);
 }
 #secondary-menu > ul > li > a {
 	padding: 0 1.25ch;
@@ -104,6 +127,28 @@ header.sticky #main-menu > ul > li > a {
 #main-menu ul > :last-child > a,
 #secondary-menu > ul > :last-child > a {
 	padding-right: var(--padding);
+}
+
+nav ul > li > .icon {
+	transition: var(--transition-medium), transform var(--transition-medium) var(--ease-in-out-back);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: -1;
+}
+nav ul > li > a:hover + .icon {
+	opacity: 0.8;
+	transform: scale(1.2);
+}
+nav ul > li > a:not(:hover) + .icon {
+	opacity: 0.1;
+	stroke: #000;
+}
+header.immersive nav ul > li > a:not(:hover) + .icon {
+	opacity: 0.25;
+	stroke: #fff;
 }
 
 
@@ -139,9 +184,10 @@ nav > ul > li ul > li > a {
 }
 
 
-@media (max-width: 38rem) {
+/*@media (max-width: 38rem) {
 	#main-menu {
 		background-position: calc(100% - var(--padding));
+		justify-content: flex-start;
 	}
 	#logo {
 		padding: 0 1.25em;
@@ -161,12 +207,6 @@ nav > ul > li ul > li > a {
 		pointer-events: none;
 		transform: perspective(500px) rotateX(-90deg);
 	}
-	/*#main-menu > ul:before {
-		content: 'Menu';
-		display: block;
-		line-height: var(--main-menu-height);
-		pointer-events: auto;
-	}*/
 	#main-menu > ul > li {
 		flex: 100%;
 		flex-wrap: wrap;
@@ -177,7 +217,6 @@ nav > ul > li ul > li > a {
 		padding: 0 var(--padding);
 	}
 	#wrapper header:hover ~ * > * {
-		/*filter: blur(10px);*/
 		filter: blur(6px);
 	}
 	
@@ -194,7 +233,38 @@ nav > ul > li ul > li > a {
 		content: '●';
 		margin-right: 1ch;
 	}
+}*/
+
+
+
+
+header.full:not(.sticky) {
+	--main-menu-height: calc(100vh - var(--secondary-menu-height));
+	box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 100vmax, rgba(0, 0, 0, 0.5) 0 0 0 100vmax inset;
 }
+header.full:not(.sticky) #main-menu {
+	background-color: transparent;
+	padding: var(--padding);
+
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+header.full:not(.sticky) #logo {
+	margin-right: 0;
+	height: 15vh;
+}
+header.full:not(.sticky) #main-menu > ul {
+	justify-content: center;
+	padding: var(--padding);
+}
+header.full:not(.sticky) #main-menu > ul > li > a {
+	color: rgba(255, 255, 255, 0.95);
+	font-size: 2.5rem;
+	line-height: 3;
+}
+
+
 
 #secondary-menu.sub-menu-open ~ header > nav > ul > li > a {
 	opacity: 0;
