--- a/src/assets/scrollbars.css
+++ b/src/assets/scrollbars.css
@@ -56,22 +56,22 @@ body::-webkit-scrollbar-track-piece {
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: rgba(103, 183, 225, 0.85);
+	background-color: hsla(var(--accent-1-values), 0.85);
 	-webkit-background-clip: content-box;
 	border: 2px solid transparent;
 	border-radius: 10px;
 	min-height: 40px;
 }
 ::-webkit-scrollbar-thumb:hover {
-	background-color: rgba(103, 183, 225, 0.9);
+	background-color: hsla(var(--accent-1-values), 0.9);
 }
 ::-webkit-scrollbar-thumb:active {
-	background-color: rgba(103, 183, 225, 0.95);
+	background-color: hsla(var(--accent-1-values), 0.95);
 	/*box-shadow: 0 0 25px rgba(103, 183, 225, 0.9);*/
 }
 
 ::-webkit-scrollbar-corner {
-	background-color: rgba(103, 183, 225, 0.2);
+	background-color: hsla(var(--accent-1-values), 0.2);
 	border: none;
 	border-bottom-right-radius: 50%;
 }
