Use the locally installed Fun Font for now

--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -45,13 +45,13 @@
 	font-style: normal;
 }
 
-@font-face {
+/*@font-face {
 	font-family: 'Fun Font';
 	src:
 		url(../fonts/FunFont.otf) format('opentype');
 	font-weight: normal;
 	font-style: normal;
-}
+}*/
 
 
 
