--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -6,6 +6,11 @@
 #wrapper header.sticky {
 	--main-menu-height: 4.25rem;
 }
+@media (max-height: 21.25rem){
+	#wrapper header.sticky {
+		--main-menu-height: 20vh;
+	}
+}
 
 #main-menu {
 	background: rgba(255, 255, 255, 0.95) url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 13"><g opacity=".4"><rect width="18" height="3" rx="1"/><rect y="5" width="18" height="3" rx="1"/><rect y="10" width="18" height="3" rx="1"/></g></svg>') 200% center/7.5% 25% no-repeat;
