--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -1,23 +1,175 @@
 <template id="dy-header">
-	<header>
-		<slot></slot>
+	<nav id="secondary-menu" class="immersive">
+		<ul>
+			<li>
+				<a href="./about">About Me</a>
+			</li>
+			<li>
+				<a href="./about-this-site">About This Site</a>
+			</li>
+			<li>
+				<a href="./contact">Contact</a>
+			</li>
+			<li class="has-sub-menu">
+				<a>Social Profiles</a>
+				<ul id="social-profiles">
+					<li>
+						<a href="https://www.facebook.com/darrylyeoblog">Facebook</a>
+					</li>
+					<li>
+						<a href="https://twitter.com/ddarrylyeo">Twitter</a>
+					</li>
+					<li>
+						<a href="https://plus.google.com/+DarrylYeo">Google+</a>
+					</li>
+					<li>
+						<a href="https://www.pinterest.com/darrylyeo/">Pinterest</a>
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/darrylyeo">LinkedIn</a>
+					</li>
+					<li>
+						<a href="https://soundcloud.com/darrylyeo">SoundCloud</a>
+					</li>
+					<li>
+						<a href="https://soundcloud.com/darrylyeo">GitHub</a>
+					</li>
+					<li>
+						<a href="https://www.khanacademy.org/profile/darrylyeo/projects">Khan Academy</a>
+					</li>
+					<li>
+						<a href="http://codepen.io/darrylyeo">CodePen</a>
+					</li>
+					<li>
+						<a href="https://www.codingame.com/profile/be5e16d40e8760f2bf5dfcaadac87f6c2729851">CodinGame</a>
+					</li>
+					<li>
+						<a href="https://musescore.com/darrylyeo">MuseScore</a>
+					</li>
+				</ul>
+			</li>
+			<li class="has-sub-menu">
+				<a>Experiments</a>
+				<ul id="experiments">
+					<li>
+						<a data-experiment="night-mode">Night Mode</a>
+					</li>
+					<li>
+						<a data-experiment="jelly">Jelly</a>
+					</li>
+					<li>
+						<a data-experiment="spotlight">Spotlight</a>
+					</li>
+					<li>
+						<a data-experiment="tornado">Tornado</a>
+					</li>
+					<li>
+						<a data-experiment="3d-parallax">3D Parallax</a>
+					</li>
+					<li>
+						<a data-experiment="ajax-navigation">AJAX Navigation</a>
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+	<header id="header">
+		<nav id="main-menu">
+			<a href="./" id="logo">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="90 80.5 1830 345" height="50" width="265"><g fill-rule="evenodd"><path fill="#14b4ff" d="M93.74 99.36c-4.39-3.12-3.39-11.12 2.4-11.72 51.16-1.8 102.3 21.98 134.48 61.71 21.25 25.91 34.54 58.27 37.46 91.67 3.35 35.25-5 71.46-23.2 101.82-15.89 26.69-39.33 48.84-66.93 63.09-23.65 12.42-50.33 18.97-77.02 19.1-3.82.53-7.89-2.92-7.05-6.9.51-2.73-.06-5.45-.15-8.17.02-103.53-.02-207.06.01-310.6zm12.52.84c34.07 1.18 67.53 14.18 93.68 36.01 16.65 13.93 30.5 31.27 40.04 50.8 15.11 30.2 19.86 65.42 13.45 98.56-5.98 31.65-22.1 61.29-45.42 83.51-27.15 26.07-64.06 42.06-101.75 43.1.01-103.99.02-207.99 0-311.98zm252.15-10.84c12.95-7.62 28.94-10.43 43.51-6.18 20.09 5.56 35.58 21.19 46.65 38.23 17.19 26.81 25.96 58.17 30.2 89.49 3.27 23.24 2.44 46.74 2.5 70.14 0 43.32-.01 86.64.01 129.96.16 2.89-1.02 6.27-4.03 7.23-4.04 1.91-8.87-1.9-8.49-6.24-.07-43.57 0-87.14-.04-130.71-54.14-.02-108.29-.01-162.44-.01-.05 43.6.04 87.2-.04 130.8.31 4.17-4.24 7.96-8.21 6.26-2.76-.75-4.3-3.61-4.27-6.32-.11-54.66.08-109.33-.11-163.98.59-39.1 7.43-78.88 25.39-113.93 9.29-17.69 21.85-34.52 39.37-44.74zm9.29 9.31c9.88-5.1 21.75-6.39 32.38-2.93 12.87 4.03 23.34 13.33 31.61 23.7 17.32 22.26 26.58 49.67 32.03 77.05 4.77 23.76 5.33 48.07 5.01 72.23-54.15.02-108.31.02-162.46 0-.15-7.92.3-15.84.01-23.76.96-37.66 7.95-76.06 26.24-109.37 8.49-14.83 19.64-29.08 35.18-36.92zm136.05-6.62c.72-3.25 4.17-4.85 7.27-4.6 37.45-.07 75.55 7.63 108.41 26.09 17.74 10.12 33.99 23.76 44.52 41.47 7.37 12.28 11.54 26.58 11.06 40.95-.54 19.06-9.25 37.16-21.82 51.22-15.88 17.89-37.1 30.22-59.26 38.69 23.53 39.46 47.23 78.81 70.88 118.2 2 3.36 5.51 7.6 2.99 11.58-2.2 4.36-9.04 3.78-11.03-.49-25.02-41.73-50.13-83.41-75.06-125.19-20.36 6.32-41.63 9.31-62.9 10.05.01 33.32 0 66.63 0 99.95-.05 4.75.79 9.62-.4 14.29-.75 3.57-5.2 5.46-8.4 3.92-2.57-.86-3.66-3.63-3.86-6.11.01-104.32.15-208.66-.06-312.98-1.68-1.89-3.37-4.42-2.34-7.04zm15.18 7.99c36.02 1.32 72.68 9.81 103.06 29.86 14.02 9.45 26.7 21.68 34.11 37.08 5.93 12 7.97 26 5.03 39.11-3.46 15.97-13.28 29.9-25.26 40.72-12.32 11.13-26.97 19.41-42.29 25.67-23.73 9.53-49.25 14.13-74.75 14.95-.04-54.79-.01-109.59-.02-164.38.26-7.67.25-15.34.12-23.01zm172.09-7.15c.41-3.33 3.68-5.69 6.96-5.42 36.55-.19 73.69 7.1 106.07 24.49 15.92 8.65 30.69 19.96 41.66 34.5 9.31 12.3 15.71 27.11 16.66 42.62 1.44 19.06-5.73 37.99-17.36 52.89-16.01 20.67-39.2 34.33-63.14 43.9.49 2.01 1.74 3.71 2.78 5.48 22.88 38.12 45.72 76.27 68.65 114.37 2 2.9 4.32 7.08 1.72 10.34-2.42 3.81-8.44 3.3-10.52-.59-20.2-33.47-40.25-67.05-60.39-100.56-5.1-8.24-9.76-16.78-15.12-24.82-20.35 6.18-41.55 9.18-62.77 9.99.09 37.31.06 74.63.02 111.94.33 4.2-4.25 8.03-8.24 6.3-3.16-.85-4.47-4.33-4.28-7.31.02-103.93-.01-207.85.03-311.77-1.53-1.76-3.28-3.82-2.73-6.35zm15.22 7.17c36.21 1.25 73.12 9.83 103.6 30.08 14.56 9.87 27.65 22.82 34.81 39.11 5.55 12.42 6.96 26.71 3.25 39.85-5.28 19.3-19.29 34.99-35.33 46.36-30.85 21.66-68.95 30.56-106.17 32.05-.33-62.48 0-124.97-.16-187.45zm151.11 3.6c-2.6-3.73-.08-9.75 4.64-9.77 3.39-.61 5.79 2.42 7.22 5.06 21.81 38.41 43.8 76.71 65.69 115.08 9.27 16.05 18.24 32.28 27.71 48.22 31.23-54.96 62.73-109.76 94.01-164.68 1.36-2.14 3.62-4.21 6.38-3.68 4.68 0 7.24 5.98 4.68 9.71-31.87 55.81-63.77 111.61-95.66 167.41-1.37 2.53-3.41 4.95-3.19 8.01-.04 41.98-.01 83.97-.02 125.95-.1 3.81.86 8.08-1.42 11.45-2.68 3.58-9.21 2.8-10.6-1.56-1.54-4.81-.52-9.93-.6-14.87-.01-39.66.01-79.31-.01-118.97-.15-2.07.11-4.32-.99-6.17-32.64-57.05-65.23-114.13-97.84-171.19zm236.39-2.65c-.61-4.4 3.8-8.46 8.11-6.92 3.5.81 4.68 4.7 4.44 7.89-.07 101.31.05 202.62-.06 303.93 24.23.63 48.5.1 72.74.28 20.98-.01 41.97 0 62.95 0 3.84.04 8.06-.9 11.56 1.2 3.28 2.06 3.58 7.18.69 9.72-2.84 2.38-6.75 1.61-10.13 1.71-48.34 0-96.69-.04-145.01.03-2.82-.59-5.33-2.95-5.31-5.97.03-103.95-.01-207.91.02-311.87z"/><path fill="#ffb84e" d="M1218.17 88.22c8.46-3.51 18.89-1.14 25.19 5.47 3.17 3.34 5.12 7.56 7.44 11.49 23.09 40.31 46.02 80.72 69.2 120.98 24.53-42.6 48.75-85.36 73.24-127.98 3.97-6.98 11.73-11.45 19.75-11.58 8.33-.21 16.52 4.56 20.65 11.76 4.05 7.08 4.03 16.18-.05 23.24-26.29 46.03-52.6 92.04-78.89 138.06-3.63 6.63-7.77 13.01-11.08 19.8-.69 7.13-.08 14.36-.28 21.53 0 32.01-.02 64.03.01 96.04.04 4.58.15 9.34-1.72 13.62-3.54 8.51-12.39 14.65-21.7 14.37-9.54.24-18.54-6.27-21.86-15.11-1.72-4.42-1.42-9.24-1.41-13.89.02-36.65-.02-73.3.02-109.95-.09-2.9.46-6.07-1.22-8.64-29.57-51.72-59.12-103.47-88.7-155.19-3.22-5.46-4.42-12.2-2.62-18.34 1.72-7.14 7.26-13 14.03-15.68zM1460 108c.38-11.02 10.18-20.7 21.11-21.42 44.28.17 88.59.04 132.87.08 5.24.14 10.58-.51 15.72.81 10.11 2.78 17.74 12.99 16.96 23.56-.14 12.58-12.11 23.37-24.64 22.33-33.68-.04-67.36-.01-101.03-.02-4.81.09-9.62-.24-14.41.21.17 30.96.17 61.94 0 92.9 27.78.49 55.58.07 83.37.21 6.25.17 12.8-.74 18.77 1.68 7.72 2.99 13.48 10.43 14.4 18.68 1.19 8.49-2.75 17.46-9.89 22.24-4.14 2.91-9.25 4.15-14.26 4.09-29.64-.02-59.29 0-88.93-.01-1.18.04-2.33.11-3.47.22.27 34.91.02 69.83.13 104.74 36.78.03 73.57.01 110.36.01 4.54.05 9.23-.35 13.62 1.12 6.69 2.21 12.24 7.62 14.67 14.25 2.58 7.36 1.45 16.09-3.48 22.23-4.22 5.47-10.89 9.09-17.85 9.08-47 .04-94.01-.04-141.01.04-11.86.55-23-10.16-23.03-22 .04-98.34.01-196.69.02-295.03zm317.19-26.67c19.04-1.81 38.64 1.85 55.53 10.88 28.41 14.93 50.55 40.41 63.56 69.55 17.72 39.77 23.1 84.97 15.05 127.77-5.91 31.35-17.92 62.35-39.11 86.6-12.28 14.12-27.24 26.08-44.24 33.99-19.53 9.12-42.09 11.24-63.09 6.62-14.29-3.09-27.57-9.82-39.42-18.27-16.15-11.69-29.79-26.78-39.96-43.92-18.32-31.53-26.89-68.21-27.21-104.52.33-37.25 9.3-74.95 28.67-106.99 10.9-17.55 25.44-32.91 42.66-44.37 14.15-9.5 30.52-15.87 47.56-17.34zm.09 47c18.6-3.39 38.04 3.97 51.6 16.74 11.45 10.86 19.81 24.58 26.32 38.86 9.43 21 13.21 44.19 13.05 67.11-.04 23.76-4.5 47.77-14.99 69.21-6.79 13.71-15.28 26.94-26.97 36.98-14.49 12.37-35.02 18.7-53.68 13.37-13.9-3.51-26.14-12.08-35.18-23.07-12.68-15.37-21.69-33.66-26.88-52.87-5.77-22.04-6.74-45.18-4.14-67.76 2.43-19.89 8.57-39.41 18.76-56.72 7.48-12.92 16.95-25.23 29.79-33.21 6.8-4.27 14.45-7.11 22.32-8.64z"/></g></svg>
+			</a>
+			<ul>
+				<li>
+					<a href="./category/code">Code</a>
+					<dy-icon icon="code"></dy-icon>
+				</li>
+				<li>
+					<a href="./category/art">Art</a>
+					<dy-icon icon="art"></dy-icon>
+				</li>
+				<li>
+					<a href="./category/music">Music</a>
+					<dy-icon icon="music"></dy-icon>
+				</li>
+				<!--<li>
+					<a href="./category/code">Code</a>
+					<svg class="icon code">
+						<use href="<?php echo get_stylesheet_directory_uri() ?>/assets/icons.svg#code" />
+					</svg>
+				</li>
+				<li>
+					<a href="./category/art">Art</a>
+					<svg class="icon art">
+						<use href="<?php echo get_stylesheet_directory_uri() ?>/assets/icons.svg#art" />
+					</svg>
+				</li>
+				<li>
+					<a href="./category/music">Music</a>
+					<svg class="icon music">
+						<use href="<?php echo get_stylesheet_directory_uri() ?>/assets/icons.svg#music" />
+					</svg>
+				</li>-->
+				<li>
+					<a href="./blog">Blog</a>
+				</li>
+				<li class="has-sub-menu">
+					<a href="./learn">Learn</a>
+					<!--<ul>
+						<li>
+							<a href="./make-a-website-autobiography">Make A Website Autobiography!</a>
+						</li>
+						<li>
+							<a href="./a-visual-introduction-to-javascript-programming">A Visual Inroduction To JavaScript Programming</a>
+						</li>
+					</ul>-->
+				</li>
+			</ul>
+			<!--<div id="navigation">
+				<a rel="prev">Previous: <span></span></a>
+				<a rel="next">Next: <span></span></a>
+			</div>-->
+		</nav>
 	</header>
 </template>
 
 <script>
 class DYHeader extends DYElement {
-	static get observedAttributes() {
+	/*static get observedAttributes() {
 		return ['logo', 'single-post', 'immersive']
-	}
+	}*/
 
 	constructor(){
 		super()
 
 		const root = this.root
+		const $header = this.$header
+		const $mainMenu = this.$mainMenu
+		const $secondaryMenu = this.$secondaryMenu
+
+		/*window.on('scroll', (e => {
+			this.$header.classList[window.scrollY > $('#secondary-menu').clientBottom ? 'add' : 'remove']('sticky')
+		}).throttle(10))*/
 
 		window.on('scroll', (e => {
-			this.$header.classList[window.scrollY > $('#secondary-menu').clientBottom ? 'add' : 'remove']('sticky')
-		}).throttle(10))
+			//X($header.computedStyle, $header.computedStyle['--main-menu-sticky-height'], parseInt($header.computedStyle['--main-menu-sticky-height']))
+
+			//$header.toggleClass($header.top <= 0, 'sticky')
+			//$header.animateStyleChange(function(){
+				const isSticky = this.isSticky
+				$header.toggleClass(isSticky, 'sticky')
+
+				if(this.isFull && !isSticky)
+					$header.css('--main-menu-height', window.innerHeight - window.scrollY + 'px')
+				else
+					$header.css('--main-menu-height', '')
+			//})
+		}).throttle())
+
+
+		window.on('pageload', () => {
+			$header.toggleClass(WP.queryType === 'front-page', 'full', 'immersive')
+			$secondaryMenu.toggleClass(WP.queryType === 'front-page', 'immersive')
+		})
 	}
 
 	attributeChangedCallback(attr, oldVal, newVal){
@@ -34,7 +186,106 @@ class DYHeader extends DYElement {
 	}
 
 	get $header(){
-		return this.root.find('header')
+		return this.root.find('#header')[0]
+	}
+	get $mainMenu(){
+		return this.root.find('#main-menu')[0]
+	}
+	get $secondaryMenu(){
+		return this.root.find('#secondary-menu')[0]
+	}
+	get $logo(){
+		return this.root.find('#logo')[0]
+	}
+
+	get mainMenuStickyHeight(){
+		// Need a better way to get the computed pixel value of --main-menu-sticky-height
+		return parseInt(this.$header.computedStyle.getPropertyValue('flex-basis'))
+	}
+	get stickyScrollY(){
+		if(this.isFull)
+			return this.clientBottom - this.mainMenuStickyHeight
+		else
+			return this.$secondaryMenu.clientBottom
+	}
+
+	get isFull(){
+		return this.$header.hasClass('full')
+	}
+	get isSticky(){
+		return window.scrollY >= this.stickyScrollY
+	}
+
+	showNavItems(){
+		const items = [...arguments]
+
+		const root = this.root
+		const $logo = this.$logo
+
+		if(items.length){
+			$logo.animate([
+				{ marginRight: getComputedStyle($logo).marginRight }, 
+				{ marginRight: '-1em' }
+			], { 
+				duration: 500,
+				fill: 'forwards',
+				easing: 'ease-out'
+			})
+		}else{
+			$logo.animate([
+				{ marginRight: '-1em' },
+				{ marginRight: getComputedStyle($logo).marginRight }
+			], { 
+				duration: 500,
+				fill: 'forwards',
+				easing: 'ease-out'
+			})
+		}
+
+		for(const $navItem of root.find('#main-menu > ul > li')){
+			$navItem.css('display', '')
+
+			const showStyle = {
+				opacity: '1',
+				width: $navItem.computedStyle.width,
+				transform: 'none'
+			}
+			const hideStyle = {
+				opacity: '0',
+				width: '0',
+				transform: 'scale(0.5)'
+			}
+
+			if(!items.length || items.includes($navItem.innerText.toLowerCase().trim())){
+				$navItem.play()
+				/*$navItem.animate([
+					hideStyle,
+					showStyle
+				], { 
+					duration: 500,
+					//fill: 'forwards',
+					easing: 'ease-out'
+				})*/
+			}else{
+				$navItem.animate([
+					showStyle,
+					hideStyle
+				], { 
+					duration: 500,
+					//fill: 'forwards',
+					easing: 'ease-out'
+				})
+				;(() => {
+					$navItem.css('display', 'none')
+				}).delay(500)
+				/*$navItem.once({
+					animationend(){
+						X(this, 'end')
+						this.css('display', 'none')
+					}
+				})*/
+			}
+		}
 	}
 }
 customElements.define('dy-header', DYHeader, {
