--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -1,70 +1,90 @@
-#wrapper header {
-	padding-bottom: var(--main-menu-height);
-	transition: padding-bottom var(--transition-slow);
-	will-change: padding-bottom;
+#header {
+	--main-menu-sticky-height: 4.25rem;
+	/* used to get computed pixel value in JavaScript: */ flex-basis: var(--main-menu-sticky-height);
+
+	height: var(--main-menu-height);
+
+	transition: height var(--transition-slow);
+	will-change: height;
+
+	position: relative;
+
+	/*position: sticky;
+	top: 0;*/
 }
-#wrapper header.sticky {
-	--main-menu-height: 4.25rem;
-}
-@media (max-height: 21.25rem){
-	#wrapper header.sticky {
-		--main-menu-height: 20vh;
+@media (max-height: 28.33333rem){
+	#header {
+		--main-menu-sticky-height: 15vh;
 	}
+}
+#header.sticky {
+	--main-menu-height: var(--main-menu-sticky-height);
 }
 
 #main-menu {
-	background: rgba(255, 255, 255, 0.95) url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 13"><g opacity=".4"><rect width="18" height="3" rx="1"/><rect y="5" width="18" height="3" rx="1"/><rect y="10" width="18" height="3" rx="1"/></g></svg>') 200% center/7.5% 25% no-repeat;
+	/*background: rgba(255, 255, 255, 0.95) url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 13"><g opacity=".4"><rect width="18" height="3" rx="1"/><rect y="5" width="18" height="3" rx="1"/><rect y="10" width="18" height="3" rx="1"/></g></svg>') 200% center/7.5% 25% no-repeat;*/
+	background-color: rgba(255, 255, 255, 0.95);
 	box-shadow: rgba(0,0,0,0.1) 0 -1px inset;
 	color: rgba(0,0,0,0.75);
 
 	flex: 0 auto;
 	justify-content: center;
-
-	position: absolute;
-	transition: var(--transition-slow);
-	width: var(--site-width);
+	width: 100%;
 	height: var(--main-menu-height);
+
+	transition: var(--transition-slow);
 	z-index: 2;
-	will-change: height;
+
+	/*position: sticky;
+	top: 0;*/
+	position: absolute;
+	bottom: 0;
+	min-height: max-content;
 }
-header.immersive:not(.sticky) {
-	/*mix-blend-mode: overlay;*/ /* Very, VERY laggy! */
-	z-index: 1;
-}
-header.immersive #main-menu {
-	background-color: transparent;
-	background: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
-}
-header.immersive #main-menu > ul > li > a {
-	color: #fff;
-}
-header.sticky #main-menu {
-	box-shadow: var(--shadow-dark-0);
+#header.sticky #main-menu {
+	/*box-shadow: var(--shadow-dark-0);*/
 	position: fixed;
 	top: 0;
 }
-header.sticky #main-menu > ul {
+#header.sticky #main-menu > ul {
 	flex-wrap: nowrap;
+}
+
+
+#header.immersive:not(.sticky) {
+	/*mix-blend-mode: overlay;*/ /* Very, VERY laggy! */
+	z-index: 1;
+}
+/*#header.immersive #main-menu {
+	background-color: transparent;
+	background: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
+	background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.4));
+}
+#header.immersive #main-menu > ul > li > a {
+	color: #fff;
+}*/
+#header.immersive #main-menu {
+	background: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.7));
 }
 
 #logo {
 	margin-right: auto;
 	padding: 0 var(--padding);
-	height: var(--main-menu-height);
-	will-change: transform;
+	height: 100%;
+	transition: height var(--transition-slow);
 }
-#logo img {
-	margin: auto 0;
+#logo svg {
+	margin: auto;
 	width: auto;
 	height: 52.5%;
-	transform: perspective(500px) translate(0); /* adding translate(0) ensures height is updated after transitioning from sticky header to non sticky header */
+	transform: perspective(500px) translate(0); /* adding translate(0) ensures height is updated after transitioning from sticky #header to non sticky #header */
 	transform-origin: left;
 	transition: var(--transition-slow) var(--ease-in-out-back);
 }
-/*header.immersive #logo img {
+/*#header.immersive #logo img {
 	filter: brightness(20);
 }*/
-#logo:hover img {
+#logo:hover svg {
 	transform: perspective(500px) rotateY(20deg);
 }
 
@@ -73,6 +93,8 @@ header.sticky #main-menu > ul {
 	color: #fff;
 	font-size: 0.75em;
 	line-height: var(--secondary-menu-height);
+	position: relative;
+	z-index: 2;
 }
 #secondary-menu.immersive {
 	background-color: transparent;
@@ -108,11 +130,11 @@ nav ul > li > a {
 	text-transform: uppercase;
 
 	padding: 0 0.8em;
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 	transition: var(--transition-fast), font-size var(--transition-slow), transform var(--transition-medium) 0.05s var(--ease-in-out-back);
 }
-header.sticky #main-menu > ul > li > a {
+#header.sticky #main-menu > ul > li > a {
 	font-size: 0.9em;
 }
 #main-menu ul > li > a:hover {
@@ -134,7 +156,7 @@ header.sticky #main-menu > ul > li > a {
 	padding-right: var(--padding);
 }
 
-nav ul > li > .icon {
+nav ul > li > dy-icon {
 	transition: var(--transition-medium), transform var(--transition-medium) var(--ease-in-out-back);
 	position: absolute;
 	width: 100%;
@@ -143,15 +165,15 @@ nav ul > li > .icon {
 	top: 0;
 	z-index: -1;
 }
-nav ul > li > a:hover + .icon {
+nav ul > li > a:hover + dy-icon {
 	opacity: 0.8;
 	transform: scale(1.2);
 }
-nav ul > li > a:not(:hover) + .icon {
+nav ul > li > a:not(:hover) + dy-icon {
 	opacity: 0.1;
 	stroke: #000;
 }
-header.immersive nav ul > li > a:not(:hover) + .icon {
+#header.immersive nav ul > li > a:not(:hover) + dy-icon {
 	opacity: 0.25;
 	stroke: #fff;
 }
@@ -221,7 +243,7 @@ nav > ul > li ul > li > a {
 		line-height: 2.5;
 		padding: 0 var(--padding);
 	}
-	#wrapper header:hover ~ * > * {
+	#header:hover ~ * > * {
 		filter: blur(6px);
 	}
 	
@@ -236,34 +258,56 @@ nav > ul > li ul > li > a {
 	}
 	#main-menu > ul > li ul > li > a:before {
 		content: '●';
-		margin-right: 1ch;
+		ma`rgin-right: 1ch;
 	}
 }*/
 
 
 
 
-header.full:not(.sticky) {
-	--main-menu-height: calc(100vh - var(--secondary-menu-height));
-	box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 100vmax, rgba(0, 0, 0, 0.5) 0 0 0 100vmax inset;
+#header.full {
+	height: calc(100vh - var(--secondary-menu-height));
+	/*box-shadow: rgba(0, 0, 0, 0.5) 0 0 0 100vmax, rgba(0, 0, 0, 0.5) 0 0 0 100vmax inset;*/
 }
-header.full:not(.sticky) #main-menu {
-	background-color: transparent;
+#header.full #main-menu {
+	transition: background var(--transition-slow);
+}
+#header.full:not(.sticky) #main-menu {
+	background:
+		radial-gradient(
+			at center 30%,
+			hsla(var(--accent-1-values), 0.5),
+			rgba(0, 0, 0, 0.3)
+		),
+		repeating-linear-gradient(
+			10deg,
+			rgba(0, 0, 0, 0.03),
+			rgba(0, 0, 0, 0.03) 0.5rem,
+			transparent 0.5rem,
+			transparent 1rem
+		);
 	padding: var(--padding);
 
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
-header.full:not(.sticky) #logo {
+#header.full:not(.sticky) #logo {
 	margin-right: 0;
-	height: 15vh;
+	margin-bottom: 1rem;
+	max-width: 100%;
+	width: 100%;
 }
-header.full:not(.sticky) #main-menu > ul {
+#header.full #logo {
+	max-height: 7rem;
+}
+/*#header.full:not(.sticky) #main-menu > * {
+	filter: drop-shadow(#fff 0 0 4rem);
+}*/
+#header.full:not(.sticky) #main-menu > ul {
 	justify-content: center;
-	padding: var(--padding);
 }
-header.full:not(.sticky) #main-menu > ul > li > a {
+#header.full:not(.sticky) #main-menu > ul > li > a {
 	color: rgba(255, 255, 255, 0.95);
 	font-size: 2.5rem;
 	line-height: 3;
@@ -271,7 +315,7 @@ header.full:not(.sticky) #main-menu > ul > li > a {
 
 
 
-#secondary-menu.sub-menu-open ~ header > nav > ul > li > a {
+#secondary-menu.sub-menu-open ~ #header > nav > ul > li > a {
 	opacity: 0;
 }
 /*body.sub-menu-open main > * > *,
